--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -10,3 +10,61 @@
   margin: 4px 2px;
   cursor: pointer;
 }
+.balance-container {
+  display: flex; /* Arrange elements in a column */
+  flex-direction: column; /* Arrange elements in a column */
+  justify-content: space-between; /* Distribute space evenly */
+  align-items: center; /* Vertically align items */
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.balance-text {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.component-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.deposit-container {
+  display: row; /* Arrange elements in a row */
+  justify-content: space-between; /* Distribute space evenly */
+  align-items: center; /* Vertically align items */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.payout-container {
+  display: row; /* Arrange elements in a row */
+  justify-content: space-between; /* Distribute space evenly */
+  align-items: center; /* Vertically align items */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.all-buttons {
+  padding: 10px 20px;
+  background-color: #4caf50; /* Green */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.column-container {
+  display: flex;
+  flex-direction: row; /* Arrange elements in a column */
+  align-items: center; /* Center elements horizontally */
+}
