--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -73,3 +73,41 @@
   overflow-y: auto; /* Enable vertical scrolling */
   height: 200px; /* Set a fixed height for the container */
 }
+
+.column-header {
+  width: 50%; /* Adjust width as needed */
+  text-align: left; /* Align text to the left */
+}
+
+.column-data {
+  width: 50%; /* Adjust width as needed */
+  text-align: center; /* Align text to the left */
+}
+
+/* Existing styles */
+
+@media (max-width: 768px) {
+  /* Adjust the breakpoint as needed */
+  .payout-table {
+    width: 100%; /* Make the table take up full width */
+    display: block; /* Allow the table to wrap */
+    overflow-x: auto; /* Enable horizontal scrolling if needed */
+  }
+
+  .payout-table th,
+  .payout-table td {
+    display: block; /* Make table cells block-level elements */
+    width: 100%; /* Make cells take up full width */
+    text-align: left; /* Align text to the left */
+  }
+
+  .payout-table th {
+    font-weight: bold; /* Make header cells bold */
+  }
+
+  .address-wrapper {
+    word-wrap: break-word; /* Allow the address to wrap */
+    overflow-wrap: break-word; /* Allow the address to wrap */
+    font-size: 12px; /* Adjust font size as needed */
+  }
+}
